fixing value items on mobile

--- a/style.css
+++ b/style.css
@@ -424,9 +424,13 @@ footer {
 
   .values .value-item {
     display: block;
-    width: 100%;
-    margin-bottom: 20px;
+    width: calc(
+      100% - 25px
+    ); /* Adjust the width to leave some space on both sides */
+    margin: 0 auto 20px; /* Center the item and add margin at the bottom */
     text-align: center;
+    font-size: 16px;
+    padding: 20px;
   }
 
   .values .value-item:last-child {
